package kedinet.kedinet.model.enums;

public enum Gender {
    FEMALE, MALE
}
